[package]
name = "jvmti-over-http"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[build-dependencies]
bindgen = "0.71.1"

[dependencies]
tiny_http = "0.12.0"
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
ascii = "1.1.0"
c_vec = "2.0.0"